java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateFieldMethod1-hints.pass
Create Local Variable t
Create Field t in org.netbeans.test.java.hints.CreateFieldMethod1
Create Parameter t
